// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render column empty 1`] = `
<div
  class="vxteaser-col"
  data-testid="column"
  style="width: 33%;"
/>
`;

exports[`render column with content 1`] = `
<div
  class="vxteaser-col"
  data-testid="column"
  style="width: 33%;"
>
  Column content
</div>
`;
